--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -1,13 +1,14 @@
 @import "../inicio.css";
+@import "../menu/menu.css";
 
-.middle{
+.content .middle{
     width:100%;
     height:89.5%;
     display:flex;
     flex-direction: row;
 }
 
-.middle .left{
+.content .middle .left{
     width:25%;
     height:100%;
     display:flex;
@@ -16,7 +17,7 @@
     justify-content: flex-end;
 }
 
-.middle .left button{
+.content .middle .left button{
     width: 1.875rem;
     height: 1.875rem;
     border-radius: 1.875rem;
@@ -30,25 +31,25 @@
     box-shadow: 0 0.0625rem 0.1875rem rgba(0,0,0,0.12), 0 0.0625rem 0.125rem rgba(0,0,0,0.24);
 }
 
-.middle .left button:hover{
+.content .middle .left button:hover{
     border:solid var(--text-color) 0.0625rem;
 }
 
-.middle .center{
+.content .middle .center{
     width:50%;
     height:100%;
     display:flex;
     flex-direction: column;
 }
 
-.middle .center .graph{
+.content .middle .center .graph{
     width:100%;
     height:60%;
     display:flex;
     flex-direction: column;
 }
 
-.middle .center .graph .bars{
+.content .middle .center .graph .bars{
     width:100%;
     height:92%;
     display:flex;
@@ -56,7 +57,7 @@
     justify-content: space-evenly;
 }
 
-.middle .center .graph .bars .bar{
+.content .middle .center .graph .bars .bar{
     width:8%;
     height: 100%;
     display:flex;
@@ -68,11 +69,11 @@
     color: var(--text-color);
 }
 
-.middle .center .graph .bars .bar span{
+.content .middle .center .graph .bars .bar span{
     margin-bottom:0.625rem;
 }
 
-.middle .center .graph .bars .bar #bar1{
+.content .middle .center .graph .bars .bar #bar1{
     width:100%;
     margin-bottom:0.625rem;
     background-color: var(--secondary-color);
@@ -82,11 +83,11 @@
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.middle .center .graph .bars .bar #bar1:hover{
+.content .middle .center .graph .bars .bar #bar1:hover{
     box-shadow: 0 0.875rem 1.75rem rgba(0,0,0,0.25), 0 0.0625rem 0.125rem rgba(0,0,0,0.22);
 }
 
-.middle .center .graph .bars .bar #bar2{
+.content .middle .center .graph .bars .bar #bar2{
     width:100%;
     margin-bottom:0.625rem;
     background-color: var(--secondary-color);
@@ -96,11 +97,11 @@
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.middle .center .graph .bars .bar #bar2:hover{
+.content .middle .center .graph .bars .bar #bar2:hover{
     box-shadow: 0 0.875rem 1.75rem rgba(0,0,0,0.25), 0 0.0625rem 0.125rem rgba(0,0,0,0.22);
 }
 
-.middle .center .graph .bars .bar #bar3{
+.content .middle .center .graph .bars .bar #bar3{
     width:100%;
     margin-bottom:0.625rem;
     background-color: var(--secondary-color);
@@ -110,11 +111,11 @@
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.middle .center .graph .bars .bar #bar3:hover{
+.content .middle .center .graph .bars .bar #bar3:hover{
     box-shadow: 0 0.875rem 1.75rem rgba(0,0,0,0.25), 0 0.0625rem 0.125rem rgba(0,0,0,0.22);
 }
 
-.middle .center .graph .dates{
+.content .middle .center .graph .dates{
     width:100%;
     height:8%;
     display:flex;
@@ -127,7 +128,7 @@
     border-top: solid var(--primary-color) 0.1875rem;
 }
 
-.middle .center .circle{
+.content .middle .center .circle{
     width:100%;
     height:40%;
     display:flex;
@@ -136,7 +137,7 @@
     justify-content: space-around;
 }
 
-.middle .center .circle .imc{
+.content .middle .center .circle .imc{
     width:11.25rem;
     height:11.25rem;
     border-radius: 11.25rem;
@@ -150,7 +151,7 @@
     box-shadow: 0 0.1875rem 0.375rem rgba(0,0,0,0.16), 0 0.1875rem 0.375rem rgba(0,0,0,0.23);
 }
 
-.middle .center .circle .imc .group{
+.content .middle .center .circle .imc .group{
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -158,11 +159,11 @@
     font-weight: 700;
 }
 
-.middle .center .circle .imc .group .mini{
+.content .middle .center .circle .imc .group .mini{
     font-size: 1.125rem;
     font-weight: 500;
 }
-.middle .right{
+.content .middle .right{
     width:25%;
     height:100%;
     display:flex;
@@ -170,7 +171,7 @@
     align-items: center;
 }
 
-.middle .right button{
+.content .middle .right button{
     width: 1.875rem;
     height: 1.875rem;
     border-radius: 1.875rem;
@@ -184,60 +185,60 @@
     box-shadow: 0 0.0625rem 0.1875rem rgba(0,0,0,0.12), 0 0.0625rem 0.125rem rgba(0,0,0,0.24);
 }
 
-.middle .right button:hover{
+.content .middle .right button:hover{
     border:solid var(--text-color) 1px;
 }
 
-footer{
+.content footer{
     color: var(--text-color);
     width:100%;
     font-size:0.625rem;
     font-style:italic;
 }
 
-footer span{
+.content footer span{
     margin-left:0.3125rem;
 }
 
 @media screen and (max-width:830px){
-    .middle .left{
+    .content .middle .left{
         width:10%;
     }
 
-    .middle .center{
+    .content .middle .center{
         width:80%;
     }
 
-    .middle .right{
+    .content .middle .right{
         width:10%;
     }
 
 }
 
 @media screen and (max-width:530px){
-    .middle .left{
+    .content .middle .left{
         width:15%;
     }
 
-    .middle .center{
+    .content .middle .center{
         width:70%;
     }
 
-    .middle .right{
+    .content .middle .right{
         width:15%;
     }
 
 }
 
 @media screen and (max-width:360px){
-    .middle .left button{
+    .content .middle .left button{
         width: 1.25rem;
         height: 1.25rem;
         border-radius: 1.25rem;
         font-size: 0.5625rem;
     }
 
-    .middle .right button{
+    .content .middle .right button{
         width: 1.25rem;
         height: 1.25rem;
         border-radius: 1.25rem;
@@ -248,78 +249,78 @@ footer span{
 
 @media screen and (max-width:280px){
     
-    .middle .center .graph .bars .bar{
+    .content .middle .center .graph .bars .bar{
         font-size: 0.75rem;
     }
 
-    .middle .center .graph .dates{
+    .content .middle .center .graph .dates{
         font-size: 0.625rem;
     }
 
-    .middle .center .circle .imc{
+    .content .middle .center .circle .imc{
         width:7.5rem;
         height:7.5rem;
         border-radius: 7.5rem;
     }
 
 
-    .middle .center .circle .imc .group{
+    .content .middle .center .circle .imc .group{
         font-size: 1.5625rem;
     }
 
-    .middle .center .circle .imc .group .mini{
+    .content .middle .center .circle .imc .group .mini{
         font-size: 0.75rem;
     }
 
-    .middle .left{
+    .content .middle .left{
         justify-content: space-around;
     }
 
-    .middle .left button{
+    .content .middle .left button{
         margin-right:0;
     }
 
-    .middle .right{
+    .content .middle .right{
         justify-content: space-around;
     }
 
-    .middle .right button{
+    .content .middle .right button{
         margin-left:0;
     }
 
 }
 
 @media screen and (max-height:640px){
-    .middle .center .circle .imc{
+    .content .middle .center .circle .imc{
         width:8.75rem;
         height:8.75rem;
         border-radius: 8.75rem;
     }
 
 
-    .middle .center .circle .imc .group{
+    .content .middle .center .circle .imc .group{
         font-size: 2.5rem;
     }
 
-    .middle .center .circle .imc .group .mini{
+    .content .middle .center .circle .imc .group .mini{
         font-size: 1rem;
     }
 
 }
 
 @media screen and (max-height:500px){
-    .middle .center .circle .imc{
+    .content .middle .center .circle .imc{
         width:6.25rem;
         height:6.25rem;
         border-radius: 6.25rem;
     }
 
 
-    .middle .center .circle .imc .group{
+    .content .middle .center .circle .imc .group{
         font-size: 1.875rem;
     }
 
-    .middle .center .circle .imc .group .mini{
+    .content .middle .center .circle .imc .group .mini{
         font-size: 0.9375rem;
     }
 
@@ -327,30 +328,30 @@ footer span{
 
 @media screen and (min-height:1366px){
 
-    .middle .center .circle .imc{
+    .content .middle .center .circle .imc{
         width:18.75rem;
         height:18.75rem;
         border-radius: 18.75rem;
     }
 
 
-    .middle .center .circle .imc .group{
+    .content .middle .center .circle .imc .group{
         font-size: 4rem;
     }
 
-    .middle .center .circle .imc .group .mini{
+    .content .middle .center .circle .imc .group .mini{
         font-size: 1.875rem;
     }
 
-    .middle .left{
+    .content .middle .left{
         width:10%;
     }
 
-    .middle .center{
+    .content .middle .center{
         width:80%;
     }
 
-    .middle .right{
+    .content .middle .right{
         width:10%;
     }
 
