--- a/menu/menu.css
+++ b/menu/menu.css
@@ -1,13 +1,24 @@
 @import "../inicio.css";
 
-
-header{
-    justify-content: flex-start;
+.offcanvas-header{
+    background-color: var(--primary-color);
     border-bottom: solid var(--text-color) 0.125rem;
-    font-weight: 500;
+    padding-left: 0;
+}
+.offcanvas-body{
+    padding:0;
 }
 
-header .circle{
+
+.offcanvas-header header{
+    justify-content: flex-start;
+    background-color: var(--primary-color);
+    font-weight: 500;
+    height: 100%;
+    box-shadow: none;
+}
+
+.offcanvas-header header .circle{
     margin-right: 0.625rem;
     margin-left: 0.625rem;
     width: 2.8125rem;
@@ -23,21 +34,21 @@ header .circle{
     box-shadow: 0 0.0625rem 0.1875rem rgba(0,0,0,0.12), 0 0.0625rem 0.125rem rgba(0,0,0,0.24);
 }
 
-.content{
+.offcanvas-body .content{
     justify-content: flex-start;
     background-color: var(--primary-color);
     color: var(--text-color);
-    
+    height:100%;
 }
 
-.content a{
+.offcanvas-body .content a{
     text-decoration: none;
     margin-top:1.25rem;
     width:13.75rem;
     height: 3.125rem;
 }
 
-.content a button{
+.offcanvas-body .content a button{
     width:100%;
     height: 100%;
     padding:0;
@@ -48,15 +59,15 @@ header .circle{
     transition: none;
 }
 
-.content button:hover{
+.offcanvas-body .content button:hover{
     border:solid transparent 0.0625rem;
 }
 
-.content button span{
+.offcanvas-body .content button span{
     font-weight: 600;
 }
 
-.content button .icon{
+.offcanvas-body .content button .icon{
     margin-right: 0.625rem;
     margin-left: 0.625rem;
     width: 2.1875rem;
@@ -71,7 +82,7 @@ header .circle{
 }
 
 @media screen and (max-width:412px){
-    header .circle{
+    .offcanvas-header header .circle{
         width: 35px;
         height: 35px;
         border-radius: 35px;
