--- a/cadastro/cadastro.css
+++ b/cadastro/cadastro.css
@@ -1,5 +1,7 @@
 @import "../inicio.css";
 @import "../menu/menu.css";
+@import "../janelas/confirmacao.css";
+@import "../janelas/edicao.css";
 
 .content .portrait{
     width: 100%;
