--- a/listaPeso/listaPeso.css
+++ b/listaPeso/listaPeso.css
@@ -1,5 +1,7 @@
 @import "../inicio.css";
 @import "../menu/menu.css";
+@import "../janelas/confirmacao.css";
+@import "../janelas/edicao.css";
 
 .content .table{
     width:100%;
